--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,19 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/gridsim.jar"/>
+	<classpathentry kind="lib" path="lib/qcg_job_schemas.jar"/>
+	<classpathentry kind="lib" path="lib/colt.jar"/>
+	<classpathentry kind="lib" path="lib/simjava.jar"/>
+	<classpathentry kind="lib" path="lib/castor-1.3.3-RC1.jar"/>
+	<classpathentry kind="lib" path="lib/castor-1.3.3-RC1-xml.jar"/>
+	<classpathentry kind="lib" path="lib/castor-1.3.3-RC1-core.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/schemas.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/qcg-broker_schemas.jar"/>
+	<classpathentry kind="lib" path="lib/qcg_schemas_tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
