--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,8 @@
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.6.jar"/>
 	<classpathentry kind="lib" path="lib/jcommon-1.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/TimetableChart.jar"/>
+	<classpathentry kind="lib" path="properties"/>
+	<classpathentry kind="lib" path="lib/xalan-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/castor-xml-1.2.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
